test/data/valid/tuple_repeat.py
(__version__, a, __version__) = ("3.4.5", 42, "1.2.3")
(__custom__, b, __custom__) = (23, "1.2.3", 42)
