test/data/invalid/overwrite2.py
__version__ = ".".join(map(str, range(3)))
__version__ = "1.2.3"
